<resources>
    <string name="app_name">aha</string>
    <string name="splash_updating">正在更新: %d%%</string>
    <string name="guide1_hen_nice_to">很高兴遇见你</string>
    <string name="guide1_first_meet">首次见面</string>
    <string name="guide1_first_meet2">小二已恭候多时了</string>
    <string name="guide2_your_time">适合你的闲暇时光</string>
    <string name="guide2_in_here">在这里</string>
    <string name="guide2_you_find_free">你会找到灵魂的自由</string>
    <string name="guide3_i_am_here">我在这里等你</string>
    <string name="guide3_come_on">开始吧</string>
    <string name="login_input_name">请输入用户名</string>
    <string name="login_input_psd">请输入密码</string>
    <string name="login_remember_psd">记住密码</string>
    <string name="login_toreg">注册</string>
    <string name="login_logintext">登录</string>
    <string name="login_forgot">忘记密码</string>
    <string name="register_input_email">请输入邮箱</string>
    <string name="register_input_phone">请输入手机号</string>
    <string name="privacy_title">隐私说明</string>
    <string name="forgot_confirm">确定</string>
    <string name="verify_pls_input">请输入验证码</string>
</resources>
